# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.909 2009-06-25 23:54:18 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta4 (2009/06/??)
 - (2009/06/25) Fixed bug# 3925 - Frontend::NavBarModule in agent navigation
    bar "Ticket::TicketSearchFulltext" and "Ticket::TicketSearchProfile" not
    working together.
 - (2009/06/25) Fixed bug# 3924 - Upcoming Events -> wrong displayed Escalation
    time.
 - (2009/06/25) Fixed bug# 3917 - Dashboard will crash when no Internet
    connection available - Module: ProductNotify.
 - (2009/06/25) Fixed bug# 3913 - Missing Modules in 2.4.0 beta1-beta3:
    Kernel/Output/HTML/ServicePreferencesGeneric.pm and
    Kernel/Output/HTML/SLAPreferencesGeneric.pm.
 - (2009/06/24) Fixed bug# 3826 - In auto responses and agent notifications,
    WYSIWYG is not working.
 - (2009/06/24) Fixed bug# 3796 - Admin notification edit screen is not coming
    proper in WYSIWYG editor.
 - (2009/06/22) Added PasswordMaxLoginFailed as password preferences to define
    max login till user get gets disabled (invalid-temporarily). Feature
    provided by Torsten Thau.
 - (2009/06/22) Fixed bug# 3775 - Translation error in Kernel/Language/de.pm.
 - (2009/06/22) Fixed bug# 3879 - Typing mistakes in the notification texts
    (scripts/database/otrs-initial_insert.xml).
 - (2009/06/22) Fixed bug# 3907 - Sum rows/columns in stats only adds integers.
 - (2009/06/16) Fixed bug# 3881 - Dashboard - Error message when
    http://otrs.org/rss/ is not reachable.
 - (2009/06/13) Fixed bug# 3791 - Safari v3+4 cannot work with WYSIWYG Editor.
 - (2009/06/10) Fixed bug# 3882 - Dashboard does not set LastScreenOverview.
 - (2009/06/10) Added own web user agent, Kernel::System::WebUserAgent. Removed